# RustCelik

./: LICENSE  README.md  package-lock.json  package.json
.github/workflows/: main.yml
RustCelik/: package-lock.json  package.json
RustCelik/src-tauri/: Cargo.toml  tauri.conf.json
RustCelik/src-tauri/icons/: icon.icns
RustCelik/src-tauri/src/: main.rs
RustCelik/src/components/: PrintPdf.svelte  UserInfo.svelte
RustCelik/src/lib/: Greet.svelte
RustCelik/src/routes/: +page.svelte
RustCelik/src/types/: personalId.type.ts
rust_celik/: Cargo.toml
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: PrintPdf.svelte  UserInfo.svelte
src/routes/: +page.svelte
