[package]
name = "rust_celik"
version = "0.1.0"
description = "RustCelik app for reading serbian ID cards"
authors = ["Miladin Momcilovic"]
license = "MIT License"
repository = ""
edition = "2021"
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = ["system-tray"] }
pcsc = { version = "2.8.0" }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
idreader_lib = { git = "https://github.com/lazarbankovic/serbianIdReader", branch = "refactor_to_lib"}

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
